<resources>

    <!--<string name="app_name">ValidationDemo</string>-->
    <string name="validation_name">Please, enter the name</string>
    <string name="validation_name_length">Please, enter the name with at least 3 characters</string>
    <string name="validation_participants">Please, enter the number of participants</string>
    <string name="validation_valid_email">Please, enter valid email address</string>
    <string name="validation_date">Date must be in future</string>
    <string name="validation_type">Please, select type</string>
    <string name="validation_address">Fill in the address</string>
    <string name="validation_max_lenght">Max length should be 5</string>
    <string name="validation_min_lenght">Min length should be 1</string>
    <string name="validation_success">Validation succeeded! \nThat was easy, wasn\'t it?</string>

    <string name="demo_menu_live_validation_enable">Enable live validation</string>
    <string name="demo_menu_live_validation_disable">Disable live validation</string>
    <string name="demo_email_hint">E-mail address</string>
    <string name="demo_email">Email</string>
    <string name="demo_address">Address</string>
    <string name="demo_type">Type</string>
    <string name="demo_pick_date">Pick Date</string>
    <string name="demo_date">Date</string>
    <string name="demo_participants_hint"># of participants</string>
    <string name="demo_number_of_participants">Participants</string>
    <string name="demo_name">Name</string>
    <string name="app_name">List with side alphabet</string>


    <string name="loading">Loading&#8230;</string>


    <string name="action_settings">Settings</string>
    <string name="hint">Enter some text here</string>
    <string name="save">Save</string>
    <string name="go_to_second_activity">Go to Second Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="saved">Saved in SharedPreferences. Go to second activity.</string>
    <string name="info">After saving, on subsequent launch go to second activity without saving. You will still see the saved data.</string>
    <string name="rational_location_permission">Location permission require to access current location.</string>
    <string name="ok">OK</string>


    <!--Rave-->

    <string name="accept_card_payments">Accept card payments</string>
    <string name="accept_account_payments">Accept account payments</string>
    <string name="email">Email</string>
    <string name="amount_to_charge_required">Amount to charge (required)</string>
    <string name="public_key">Public key</string>
    <string name="amount_to_charge_defaults_to_50">Amount to charge (defaults to ₦50)</string>
    <string name="txref_required">txRef (required)</string>
    <string name="narration">Narration</string>
    <string name="currency_code_e_g_ngn">Currency code e.g. NGN</string>
    <string name="country_code_e_g_ng">Country code e.g. NG</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="start_payment">START PAYMENT</string>
    <string name="secret_key">Secret Key</string>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>


    <string name="title_activity_fab">Fab Activity</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="alert_text">Enter some text</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_show">Show</string>

    <string name="snackbar_text">Snackbar Text</string>
    <string name="some_text">Some Text</string>

    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Fusce lacus nisl, venenatis accumsan fermentum sed, auctor ut magna. Integer ante erat,
        fermentum id feugiat quis, tristique eu tortor. Cras vel sodales diam, ut imperdiet urna.
        Proin et nisl vitae ante scelerisque commodo ornare vel tortor. In eget viverra nisl, eu pellentesque nisi.
        Donec molestie metus sed mauris sagittis, sed vestibulum ante rhoncus. Aenean vel neque id magna pretium viverra.
        Phasellus pellentesque faucibus urna, lacinia scelerisque sem condimentum ut. Praesent at arcu eu orci fringilla
        vehicula eu at ante. Nullam congue felis massa, at vehicula mauris efficitur egestas. In feugiat mi at orci ultricies
        porttitor. Mauris fermentum nunc dui, ut tincidunt libero cursus pretium. Quisque eu vestibulum sapien. Donec non tempus ex.
        Donec in accumsan elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
        Aliquam facilisis maximus enim eget sagittis. Vestibulum tincidunt dolor sit amet interdum porta. Fusce eu odio sem.
        Proin non condimentum elit. Curabitur elit turpis, hendrerit eget velit et,
        sagittis pellentesque felis. Donec in euismod nibh. </string>


</resources>
