<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/cardPaymentSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/accept_card_payments" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/accountPaymentSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/accept_account_payments" />


            <android.support.v7.widget.SwitchCompat
                android:id="@+id/accountMpesaSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="Accept Mpesa payments" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/accountGHMobileMoneySwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:text="Accept GH Mobile money payments" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/isLiveSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:text="Live" />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/amountEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/amount_to_charge_required"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/publicKeyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/public_key"
                android:text=""
                android:textSize="14sp" />

            <EditText
                android:id="@+id/secretKeyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/secret_key"
                android:text=""
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txRefEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/txref_required"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/narrationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/narration"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/currencyEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/currency_code_e_g_ngn"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/countryEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/country_code_e_g_ng"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/fNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lnameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name"
                android:textSize="14sp" />

            <Button
                android:id="@+id/startPaymentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/start_payment" />


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>